[metadata]
name = zenroom
description = Python wrapper for the Zenroom virtual machine
long_description = file: README.md
long_description_content_type = text/markdown
author = Sam Mulube
author_email = sam@thingful.net
maintainer = Puria Nafisi Azizi
maintainer_email = puria@dyne.org
project_urls =
    Source Code = https://github.com/DECODEproject/zenroom-py
    Zenroom = https://zenroom.org
    DECODE = https://decodeproject.eu
python_requires = >=3.6
license = AGPLv3
keywords =  zenroom crypto-language-processing virtual-machine blockchain crypto ecc dyne ecdh ecdsa zero-knowledge-proofs javascript npm ecp2 miller-loop hamming-distance elgamal aes-gcm aead seccomp goldilocks
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Affero General Public License v3
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Security

[options]
packages = find:
install_requires =
    capturer==2.4

[options.package_data]
zenroom = libs/Linux/**/**, libs/Darwin/**/**

[options.extras_require]
test =
    pytest
    pytest-cov
    codecov
    pre-commit

[aliases]
test=pytest

[tool:pytest]
addopts = --cov=zenroom --cov-report term-missing

[flake8]
ignore = E501
max-line-length = 99
